force-app/main/default/objects/HRCSVC_Org_Exception_Test_Agent__c/HRCSVC_Org_Exception_Test_Agent__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Org Exception Test Agent</label>
</CustomObject>