force-app/main/default/objects/HRCSVC_Org_Exception_Test_Agent__c/fields/HRCSVC_Process_Builder__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Process_Builder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To skip process builder</description>
    <label>Process Builder</label>
    <type>Checkbox</type>
</CustomField>