force-app/main/default/objects/HRCSVC_Org_Exception_Test_Agent__c/fields/HRCSVC_Trigger__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To skip trigger</description>
    <label>Trigger</label>
    <type>Checkbox</type>
</CustomField>