force-app/main/default/objects/HRCSVC_Org_Exception_Test_Agent__c/fields/HRCSVC_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To skip validation rule</description>
    <label>Validation Rule</label>
    <type>Checkbox</type>
</CustomField>